# simplev

./: CMakeLists.txt  README.md  evnet_pool.h
common/: copyable.h  noncopyable.h  safeguard_queue.h  tlog.hpp  util.cpp  util.h
simplev/: callbacks.h  channel.cpp  channel.h  eventloop.cpp  eventloop.h  poller.cpp  poller.h  simplev_imp.h  tcpconn.cpp  tcpconn.h  tcpserver.cpp  tcpserver.h
simplev/data/: codec.cpp  codec.h  net.cpp  net.h  slice.h
